--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <version>4.8.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.aventstack</groupId>
+      <artifactId>extentreports</artifactId>
+      <version>4.1.5</version>
+    </dependency>
 
   </dependencies>
 </project>
