--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,20 @@
       <version>4.1.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>7.11.2</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>7.11.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
