--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
       <version>7.11.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-picocontainer</artifactId>
+      <version>7.11.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
