--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,23 @@
       <version>4.1.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.3.3</version>
+    </dependency>
+
+
+    <!-- It will not display the sl4j warning message in runtime -->
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>2.0.7</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
