--- a/ViewCVs/pom.xml
+++ b/ViewCVs/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>ViewCVs</artifactId>
+  <artifactId>HHT</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>ViewCVs</name>
+  <name>HHT</name>
   <url>http://maven.apache.org</url>
 
     <properties>
@@ -18,18 +18,11 @@
 
   <dependencies>
 
-<!--    <dependency>-->
-<!--      <groupId>junit</groupId>-->
-<!--      <artifactId>junit</artifactId>-->
-<!--      <version>3.8.1</version>-->
-<!--      <scope>test</scope>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.8.21</version>
     </dependency>
-
 
 
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
