--- a/src/test/java/resources/config.properties
+++ b/src/test/java/resources/config.properties
@@ -1,4 +1,4 @@
 BrowserType=chrome
-URL=https://www.viewcvs.co.uk/index.php
+AdminURL= https://www.hanumanhindutemple.org/test_mode/adm_hht9m8a4s2/login.php
 ImpilcitTimeInSec=10
 ExplicitTimeInSec=20
