--- a/src/test/java/resources/config.properties
+++ b/src/test/java/resources/config.properties
@@ -1,4 +1,5 @@
 BrowserType=chrome
 AdminURL= https://www.hanumanhindutemple.org/test_mode/adm_hht9m8a4s2/login.php
+WebsiteURl = https://www.hanumanhindutemple.org/test_mode/index.php
 ImpilcitTimeInSec=10
 ExplicitTimeInSec=20
