--- a/src/test/java/resources/extent.properties
+++ b/src/test/java/resources/extent.properties
@@ -1,9 +1,26 @@
-basefolder.name=test-output/Extentreport
-basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+#Extent Report
+extent.reporter.spark.start=true
+extent.reporter.spark.out=ExtentReports/automation-report.html
+extent.reporter.spark.config=src/test/resources/extent-config.xml
 
-extent.reporter.spark.start= true
-extent.reporter.spark.out=test-output/Spark.html
+#FolderName
+basefolder.name=target/ExtentReport
+basefolder.datetimepattern=dd-MMM-YYYY HH-mm-ss
 
+#Screenshot
+screenshot.dir=Screenshots/
+screenshot.rel.path=../Screenshots/
+extent.reporter.spark.vieworder=dashboard,test,exception,author,device,log
 
-screenshot.dir=test-output/screenshots
-screenshot.rel.path=./screenshots/
+#System Info
+systeminfo.user=sadari
+systeminfo.build=1.3
+systeminfo.AppName= HHT
+
+#PDF Report
+extent.reporter.pdf.start=true
+extent.reporter.pdf.out=PdfReports/extent.pdf
+
+#HTML Report
+extent.reporter.html.start=true
+extent.reporter.html.out=HtmlReport/ExtentHtml.html
