--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 
     <dependencies>
 
-
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -69,13 +68,25 @@
             <version>5.1.1</version>
         </dependency>
 
-
         <dependency>
             <groupId>tech.grasshopper</groupId>
             <artifactId>extentreports-cucumber7-adapter</artifactId>
             <version>1.14.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+        <!--      <dependency>-->
+        <!--          <groupId>org.apache.logging.log4j</groupId>-->
+        <!--          <artifactId>log4j-api</artifactId>-->
+        <!--          <version>2.17.1</version>-->
+        <!--      </dependency>-->
 
     </dependencies>
 
