Updated the testcases to run individually

--- a/src/main/java/resources/log4j2.properties
+++ b/src/main/java/resources/log4j2.properties
@@ -9,7 +9,7 @@ appenders = rolling
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
 appender.rolling.fileName = logs/${filename}
-appender.rolling.filePattern = logs/${filename}-backup-%d{MM-dd-yy-HH-mm-ss}.log
+appender.rolling.filePattern = logs/${filename}-backup-%d{dd-MM-yy-HH-mm-ss}.log
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d [%t] %-5p %c - %m%n
 appender.rolling.policies.type = Policies
@@ -19,7 +19,7 @@ appender.rolling.policies.time.interval = 1
 appender.rolling.policies.time.modulate = true
 # To change log file after 1Kb size
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=10MB
+appender.rolling.policies.size.size= 1000Kb
 appender.rolling.strategy.type = DefaultRolloverStrategy
 appender.rolling.strategy.max = 20
 
