--- a/src/test/java/resources/config.properties
+++ b/src/test/java/resources/config.properties
@@ -1,7 +1,4 @@
-BrowserType=chrome
-
-
-
+BrowserType=firefox
 AdminURL= https://www.hanumanhindutemple.org/test_mode/adm_hht9m8a4s2/login.php
 WebsiteURl = https://www.hanumanhindutemple.org/test_mode/index.php
 ImpilcitTimeInSec=10
